<resources>
    <string name="app_name" translatable="false">Echo</string>
    <string name="app_github_repo" translatable="false">brahmkshatriya/echo</string>
    <string name="okay" translatable="false">Okay</string>
    <string name="cancel" translatable="false">Cancel</string>
    <string name="back" translatable="false">Back</string>
    <string name="feed" translatable="false">Feed</string>
    <string name="x_permission_required" translatable="false">%1$s Permission Required</string>
    <string name="x_was_not_granted" translatable="false">%1$s was not granted</string>
    <string name="audio" translatable="false">Audio</string>
    <string name="audio_permission_summary" translatable="false">To access your local music library</string>
    <string name="read_storage" translatable="false">Read Storage</string>
    <string name="write_storage" translatable="false">Write Storage</string>
    <string name="write_storage_permission_summary" translatable="false">To create and edit local playlists</string>
    <string name="notifications" translatable="false">Notifications</string>
    <string name="notifications_permission_summary" translatable="false">To show notification for downloads and music</string>
    <string name="remove" translatable="false">Remove</string>
    <string name="more_by_x" translatable="false">More by %1$s</string>
    <string name="songs" translatable="false">Songs</string>
    <string name="albums" translatable="false">Albums</string>
    <string name="x_radio" translatable="false">%1$s Radio</string>
    <string name="cached_songs" translatable="false">Cached Songs</string>
    <string name="cache_playlist_warning" translatable="false">Experimental Feature. Anything except listening to them is not supported.</string>
    <string name="artists" translatable="false">Artists</string>
    <string name="recently_added" translatable="false">Recently Added</string>
    <string name="refresh_library_on_reload" translatable="false">Refresh Library on Reload</string>
    <string name="refresh_library_on_reload_summary" translatable="false">Scan the device every time the feed is loaded</string>
    <string name="duration_filter" translatable="false">Duration Filter</string>
    <string name="duration_filter_summary" translatable="false">Filter out audio files with duration(in seconds) less than the value</string>
    <string name="blacklist_folders" translatable="false">Blacklist Folders</string>
    <string name="blacklist_folders_summary" translatable="false">Folders to exclude from the library</string>
    <string name="blacklist_folder_keywords" translatable="false">Blacklist Folder Keywords</string>
    <string name="blacklist_folder_keywords_summary" translatable="false">Keywords to blacklist folders, use comma for separator</string>
    <string name="saved" translatable="false">Saved</string>
    <string name="tabs" translatable="false">Tabs</string>
    <string name="show_tabs" translatable="false">Show Tabs</string>
    <string name="show_tab_summary" translatable="false">will show tabs of the extensions as category</string>
    <string name="unified_liked_playlist_summary" translatable="false">Your liked tracks from various extensions</string>
    <string name="n_items" translatable="false">%1$d Items</string>
    <string name="item" translatable="false">Item</string>
    <plurals name="number_items" translatable="false">
        <item quantity="one">%1$d Item</item>
        <item quantity="other">%1$d Items</item>
    </plurals>
    <string name="playlist_liked" translatable="false">Liked</string>
    <string name="playlist_liked_desc" translatable="false">Your liked tracks</string>
    <string name="unknown" translatable="false">Unknown</string>
    <string name="like" translatable="false">Like</string>
    <string name="unlike" translatable="false">Unlike</string>
    <string name="repeat_one" translatable="false">Repeat One</string>
    <string name="repeat_off" translatable="false">Repeat Off</string>
    <string name="repeat_all" translatable="false">Repeat All</string>
    <string name="home" translatable="false">Home</string>
    <string name="search" translatable="false">Search</string>
    <string name="library" translatable="false">Library</string>
    <string name="more" translatable="false">More</string>
    <string name="extension" translatable="false">Extension</string>
    <string name="downloading_x" translatable="false">Downloading %1$s</string>
    <string name="cancel_all" translatable="false">Cancel All</string>
    <string name="download_progress" translatable="false">Download Progress</string>
    <string name="downloads" translatable="false">Downloads</string>
    <string name="downloaded_x" translatable="false">Downloaded %1$s</string>
    <string name="logout_and_login" translatable="false">Logout and Login</string>
    <string name="login" translatable="false">Login</string>
    <string name="view" translatable="false">View</string>
    <string name="extension_out_of_date" translatable="false">Out of date</string>
    <string name="no_internet" translatable="false">No Internet</string>
    <string name="error_loading_extension_from_x" translatable="false">Error loading extension from %1$s</string>
    <string name="extension_x_not_found" translatable="false">Extension %1$s not found</string>
    <string name="required_extensions_missing_x" translatable="false">Required extensions missing: %1$s</string>
    <string name="x_login_required" translatable="false">%1$s login required</string>
    <string name="x_is_not_supported_in_x" translatable="false">%1$s is not supported in %2$s</string>
    <string name="account_session_expired_in_x" translatable="false">Account session expired in %1$s</string>
    <string name="error_x" translatable="false">Error: %1$s</string>
    <string name="str_copy" translatable="false">Copy</string>
    <string name="extensions" translatable="false">Extensions</string>
    <string name="choose_a_color" translatable="false">Choose a color</string>
    <string name="random" translatable="false">Random</string>
    <string name="add" translatable="false">Add</string>
    <string name="loading" translatable="false">Loading…</string>
    <string name="settings" translatable="false">Settings</string>
    <string name="value" translatable="false">Value</string>
    <string name="value_not_set" translatable="false">Not Set</string>
    <string name="playback" translatable="false">Playback</string>
    <string name="audio_fx" translatable="false">Audio Effects</string>
    <string name="audio_fx_summary" translatable="false">Effects applied for all songs</string>
    <string name="audio_fx_desc" translatable="false">Change the audio effects for the current track.</string>
    <string name="reset" translatable="false">Reset</string>
    <string name="playback_speed" translatable="false">Playback Speed</string>
    <string name="change_pitch_with_speed" translatable="false">Change pitch with speed</string>
    <string name="bass_boost" translatable="false">Bass Boost</string>
    <string name="bass_boost_desc" translatable="false">Larger value may distort the sound.</string>
    <string name="change_pitch_with_speed_desc" translatable="false">Get that slow-motion sound</string>
    <string name="equalizer" translatable="false">Equalizer</string>
    <string name="equalizer_summary" translatable="false">Open the device equalizer settings</string>
    <string name="stream_quality" translatable="false">Stream Quality</string>
    <string name="stream_quality_summary" translatable="false">Select the default quality of the stream</string>
    <string name="x_specific_quality_summary" translatable="false">%1$s specific stream quality, will override the default stream quality selection</string>
    <string-array name="stream_qualities">
        <item>Highest</item>
        <item>Medium</item>
        <item>Lowest</item>
    </string-array>
    <string name="unmetered_stream_quality" translatable="false">Unmetered Stream Quality</string>
    <string name="unmetered_stream_quality_summary" translatable="false">The quality of the stream when connected to an unmetered network. This will override the default stream quality.</string>
    <string name="behavior" translatable="false">Behavior</string>
    <string name="keep_queue" translatable="false">Keep Player Queue</string>
    <string name="keep_queue_summary" translatable="false">Recover the player queue, when you reopen the app.</string>
    <string name="stop_player" translatable="false">Stop player</string>
    <string name="stop_player_summary" translatable="false">Stop the player, when the app is removed from recents</string>
    <string name="skip_silence" translatable="false">Skip Silence</string>
    <string name="skip_silence_summary" translatable="false">Skip silent part in the song, to provide gapless playback.</string>
    <string name="auto_start_radio" translatable="false">Auto Start Radio</string>
    <string name="auto_start_radio_summary" translatable="false">Automatically add related songs of track in the playlist, to have an infinite queue</string>
    <string name="cache_size" translatable="false">Cache Size</string>
    <string name="cache_size_summary" translatable="false">Size in MB to cache audio and video</string>
    <string name="version" translatable="false">Version</string>
    <string name="select_language" translatable="false">Select Language</string>
    <string name="system" translatable="false">System</string>
    <string name="check_for_updates" translatable="false">Check for Updates</string>
    <string name="check_for_updates_summary" translatable="false">Look for new updates of both app and extensions, when you open the app.</string>
    <string name="install" translatable="false">Install</string>
    <string name="app" translatable="false">App</string>
    <string name="file" translatable="false">File</string>
    <string name="installation_type" translatable="false">Installation Type</string>
    <string name="installation_type_summary" translatable="false">App installation will allow the following links to open in Echo:</string>
    <string name="installation_type_warning" translatable="false">Not available if you install the extension as a File.</string>
    <string name="could_not_find_the_file" translatable="false">Could not find the file.</string>
    <string name="extension_installer" translatable="false">Extension Installer</string>
    <string name="look_and_feel" translatable="false">Look and Feel</string>
    <string name="play" translatable="false">Play</string>
    <string name="sleep_timer" translatable="false">Sleep Timer</string>
    <string name="end_of_track" translatable="false">End of Track</string>
    <string name="_15min" translatable="false">15m</string>
    <string name="_30min" translatable="false">30m</string>
    <string name="_45min" translatable="false">45m</string>
    <string name="_1hr" translatable="false">1h</string>
    <string name="_2hr" translatable="false">2h</string>
    <string name="sleep_timer_desc" translatable="false">Set a sleep timer to stop playback after a certain amount of time</string>
    <string name="share" translatable="false">Share</string>
    <string name="radio" translatable="false">Radio</string>
    <string name="follow" translatable="false">Follow</string>
    <string name="sort" translatable="false">Sort</string>
    <string name="explicit" translatable="false">Explicit</string>
    <string name="x_followers" translatable="false">%1$s Followers</string>
    <string name="save" translatable="false">Save</string>
    <string name="playlist_name" translatable="false">Playlist Name</string>
    <string name="create_playlist" translatable="false">Create Playlist</string>
    <string name="create" translatable="false">Create</string>
    <string name="other" translatable="false">Other</string>
    <string name="hide" translatable="false">Hide</string>
</resources>