<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="8dp">

    <HorizontalScrollView
        android:id="@+id/buttonGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginBottom="-56dp"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/followButton"
                style="@style/IconButtonOutlined"
                android:checkable="true"
                android:checked="false"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                android:text="@string/follow"
                app:icon="@drawable/anim_check_circle"
                android:visibility="gone"
                app:iconPadding="8dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/savedButton"
                style="@style/IconButtonOutlined"
                android:checkable="true"
                android:checked="false"
                android:contentDescription="@string/save"
                android:visibility="gone"
                app:icon="@drawable/anim_bookmark" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/playButton"
                style="@style/IconButton"
                android:contentDescription="@string/play"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium.Emphasized"
                android:visibility="gone"
                app:icon="@drawable/ic_play"
                app:iconSize="24dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/likeButton"
                style="@style/IconButtonTertiary"
                android:checkable="true"
                android:checked="false"
                android:contentDescription="@string/like"
                android:visibility="gone"
                app:icon="@drawable/anim_heart_40dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/hideButton"
                style="@style/IconButtonTonal"
                android:checkable="true"
                android:checked="false"
                android:contentDescription="@string/hide"
                app:icon="@drawable/anim_hide" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/radioButton"
                android:visibility="gone"
                style="@style/IconButtonTonal"
                android:contentDescription="@string/radio"
                app:icon="@drawable/ic_sensors" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/shareButton"
                style="@style/IconButtonOutlined"
                android:contentDescription="@string/share"
                android:visibility="gone"
                app:icon="@drawable/ic_share" />

        </LinearLayout>
    </HorizontalScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/explicit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:drawablePadding="2dp"
            android:gravity="center"
            android:padding="2dp"
            android:text="@string/explicit"
            android:visibility="gone"
            app:drawableStartCompat="@drawable/ic_explicit"
            app:drawableTint="?colorOnSurface" />

        <TextView
            android:id="@+id/followers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="2dp"
            android:padding="2dp"
            android:text="@string/x_followers"
            android:visibility="gone" />

    </LinearLayout>

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="48dp"
        android:minHeight="48dp"
        android:paddingHorizontal="4dp"
        android:paddingBottom="8dp"
        android:textColor="?colorOnSurfaceVariant"
        android:textColorLink="?colorPrimary"
        tools:text="@tools:sample/lorem/random[5]" />

</LinearLayout>
