<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:liftOnScrollTargetViewId="@id/settingsContainer">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginHorizontal="8dp"
            app:layout_scrollEffect="compress"
            app:layout_scrollFlags="scroll|enterAlwaysCollapsed|snap"
            app:menu="@menu/top_bar_menu"
            app:title="@string/settings" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.tabs.TabItem
                android:text="@string/downloads"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <com.google.android.material.tabs.TabItem
                android:text="@string/audio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/look_and_feel" />

            <com.google.android.material.tabs.TabItem
                android:text="@string/other"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </com.google.android.material.tabs.TabLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <View
        android:id="@+id/appBarOutline"
        style="@style/AppBarOutline"
        app:layout_anchor="@id/appBarLayout"
        app:layout_anchorGravity="bottom" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/settingsContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>