<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:padding="24dp">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="-20dp"
            android:layout_marginTop="-24dp"
            android:layout_marginEnd="-20dp"
            android:background="@null"
            android:paddingStart="0dp"
            android:paddingEnd="4dp"
            app:navigationIcon="@drawable/ic_close"
            app:title="@string/extension_installer"
            app:titleCentered="true" />

        <ImageView
            android:id="@+id/extensionIcon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/extension"
            app:srcCompat="@drawable/ic_extension_48dp" />

        <TextView
            android:id="@+id/extensionTitle"
            style="@style/TextAppearance.Material3.TitleLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textSize="28sp"
            tools:text="@string/extension" />

        <TextView
            android:id="@+id/extensionDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
            tools:text="Tracker Extension [APK]\nid • version • author" />

        <TextView
            android:id="@+id/extensionDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:alpha="0.66"
            android:ellipsize="end"
            tools:text="@tools:sample/lorem" />

        <TextView
            android:id="@+id/installationTypeTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/installation_type"
            android:textAppearance="?attr/textAppearanceHeadlineSmall" />

        <TextView
            android:id="@+id/installationTypeSummary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:alpha="0.66"
            android:text="@string/installation_type_summary" />

        <TextView
            android:id="@+id/installationTypeLinks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="16dp"
            tools:text="https://bruh.com\nhttps://lmfoa.com" />

        <TextView
            android:id="@+id/installationTypeWarning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/installation_type_warning"
            android:textColor="?colorError" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/installationTypeGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:checkedButton="@+id/appInstall"
            app:selectionRequired="true"
            app:singleSelection="true">

            <Button
                android:id="@+id/appInstall"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minHeight="64dp"
                android:text="@string/app" />

            <Button
                android:id="@+id/fileInstall"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minHeight="64dp"
                android:text="@string/file" />
        </com.google.android.material.button.MaterialButtonToggleGroup>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/installButton"
            style="@style/Widget.Material3.Button.UnelevatedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:minHeight="64dp"
            android:text="@string/install" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>