<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:clipToPadding="false"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="24dp">

        <TextView
            style="@style/TextAppearance.Material3.HeadlineSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/create_playlist"
            android:textAlignment="center" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInput"
            app:startIconDrawable="@drawable/ic_queue_music"
            android:hint="@string/playlist_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/playlistName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:id="@+id/playlistCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:text="@string/cancel" />

            <Button
                android:layout_marginHorizontal="8dp"
                android:id="@+id/playlistCreateButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create"
                tools:ignore="ButtonStyle" />
        </LinearLayout>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>